# Notion-Ops

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notion_ops/: __init__.py  client.py  exceptions.py  templates.py
notion_ops/models/: __init__.py  block.py  database.py  filters.py  page.py  properties.py
notion_ops/operations/: __init__.py  blocks.py  data_sources.py  databases.py  file_uploads.py  pages.py  users.py
notion_ops/utils/: __init__.py  atoms.py  ids.py  markdown.py  pagination.py  publish.py  repair.py  retry.py  rich_text.py
packaging/: notion_ops.pyproject.toml
tests/: __init__.py  conftest.py  test_api_currency.py  test_e2e_smoke.py  test_iss_003.py  test_iss_005.py  test_iss_008.py  test_markdown_chunking.py  test_markdown_formatting.py  test_models.py  test_publish.py  test_repair_blocks.py  test_republish.py  test_security_config.py  test_templates.py  test_utils.py
tests/test_operations/: conftest.py  test_async_blocks.py  test_async_data_sources.py  test_async_databases.py  test_async_pages.py  test_async_users.py  test_blocks.py  test_data_sources.py  test_databases.py  test_error_mapping.py  test_file_uploads.py  test_pages.py  test_retry.py  test_users.py
