# Build config for the public `notion-ops` PyPI package (carved out of
# AgenticOS in Session 1, 2026-05-27 — STATE.md D-26). This file is the
# root pyproject of the standalone repo `stephenBlackW/Notion-Ops`.
#
# Version is single-sourced from notion_ops/__init__.py::__version__ via the
# hatchling dynamic-version hook below (nops-housekeeping-A, 2026-05-31).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-ops"
dynamic = ["version"]
description = "A high-level, typed, retry-aware Python client for Notion workspaces."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Stephen Black", email = "stphnblck1@gmail.com" }]
keywords = ["notion", "notion-api", "client", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # Floor is the data-sources-aware line: notion-ops defaults Notion-Version
    # 2025-09-03 (databases->data_sources model) and uses the SDK's
    # `data_sources` namespace. The former >=2.3.0 floor predated that support.
    # The runtime contract is enforced by tests/test_api_currency.py.
    "notion-client>=2.4.0",
    "pydantic>=2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/stephenblackw/notion-ops"
Repository = "https://github.com/stephenblackw/notion-ops"
Issues = "https://github.com/stephenblackw/notion-ops/issues"

[tool.hatch.version]
# Single source of truth: notion_ops/__init__.py::__version__
path = "notion_ops/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["notion_ops"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring a live Notion workspace (NOTION_API_KEY)",
]

[tool.ruff.lint]
# extend-select keeps ruff's defaults (E4/E7/E9, F) and adds:
#   S = flake8-bandit (security lint) — nops-security-A scanners-first.
# Library code is held to S; the existing notion_ops surface is already clean.
extend-select = ["S"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use `assert` (S101) and other patterns bandit flags in
# library code but that are correct in a pytest suite.
"tests/**" = ["S"]

